[project]
name = "openems_utils"
version = "0.1.0"
description='OpenEMS utilities for setting up python simulations'
authors = [
    {name = "Simon Hobbs", email = "simon.hobbs@electrooptical.net"},
]
readme = "README.md"

requires-python = ">=3.9"
keywords = []
classifiers = [
    "Programming Language :: Python :: 3",
]

dependencies = [
  "numpy",
  "scipy",
]


[project.scripts]
monitor_tdr = "openems_utils.cli:main"

[tool.setuptools.packages.find]
where = ["src", "src/openems_utils"]

[tool.pylint]
max-line-length = 200
disable = [
    "C0103", # (invalid-name)
    "C0114", # (missing-module-docstring)
    "C0115", # (missing-class-docstring)
    "C0116", # (missing-function-docstring)
    "R0903", # (too-few-public-methods)
    "R0913", # (too-many-arguments)
    "W0105", # (pointless-string-statement)
    "C0301",
    "W1203",
    "C0209"
]
